Fix issue of slideshow scrollbar showing when mobile menu open

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -442,7 +442,7 @@ slider-component-custom.slider-component-full-width {
 .slideshow__controls {
   position: absolute;
   bottom: 0;
-  z-index: 9999;
+  z-index: 2;
   left: 0;
   right: 0;
   margin: 0 auto;
