--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -7,6 +7,7 @@
 .banner__box {
   text-align: center;
 }
+
 .banner_subheading {
   color: #4a4a4a;
   font-size: calc(var(--font-heading-scale) * 2rem)
@@ -47,25 +48,26 @@
   clip-path: inset(0px);
 }
 
-.banner__media.animate--zoom-in > img:not(.zoom):not(.deferred-media__poster-button),
-.banner__media.animate--zoom-in > svg:not(.zoom):not(.deferred-media__poster-button) {
+.banner__media.animate--zoom-in>img:not(.zoom):not(.deferred-media__poster-button),
+.banner__media.animate--zoom-in>svg:not(.zoom):not(.deferred-media__poster-button) {
   position: fixed;
   height: 100vh;
 }
 
 @media screen and (max-width: 749px) {
+
   .banner--small.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-  .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+  .banner--small.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt)>.banner__media {
     height: 28rem;
   }
 
   .banner--medium.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-  .banner--medium.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+  .banner--medium.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt)>.banner__media {
     height: 34rem;
   }
 
   .banner--large.banner--mobile-bottom:not(.banner--adapt) .banner__media,
-  .banner--large.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt) > .banner__media {
+  .banner--large.banner--stacked:not(.banner--mobile-bottom):not(.banner--adapt)>.banner__media {
     height: 39rem;
   }
 
@@ -174,30 +176,31 @@
   width: 50%;
 }
 
-.banner__media-half + .banner__media-half {
+.banner__media-half+.banner__media-half {
   right: 0;
   left: auto;
 }
 
-.banner__media-half.animate--fixed:first-child > img,
-.banner__media-half.animate--zoom-in:first-child > img {
+.banner__media-half.animate--fixed:first-child>img,
+.banner__media-half.animate--zoom-in:first-child>img {
   width: 50%;
 }
 
-.banner__media-half.animate--fixed:nth-child(2) > img,
-.banner__media-half.animate--zoom-in:nth-child(2) > img {
+.banner__media-half.animate--fixed:nth-child(2)>img,
+.banner__media-half.animate--zoom-in:nth-child(2)>img {
   left: 50%;
   width: 50%;
 }
 
 @media screen and (max-width: 749px) {
-  .banner--stacked .animate--fixed:first-child > img,
-  .banner--stacked .animate--zoom-in:first-child > img {
+
+  .banner--stacked .animate--fixed:first-child>img,
+  .banner--stacked .animate--zoom-in:first-child>img {
     width: 100%;
   }
 
-  .banner--stacked .banner__media-half.animate--fixed:nth-child(2) > img,
-  .banner--stacked .banner__media-half.animate--zoom-in:nth-child(2) > img {
+  .banner--stacked .banner__media-half.animate--fixed:nth-child(2)>img,
+  .banner--stacked .banner__media-half.animate--zoom-in:nth-child(2)>img {
     left: 0;
     width: 100%;
   }
@@ -206,7 +209,7 @@
     width: 100%;
   }
 
-  .banner--stacked .banner__media-half + .banner__media-half {
+  .banner--stacked .banner__media-half+.banner__media-half {
     order: 1;
   }
 }
@@ -223,6 +226,7 @@
 }
 
 @media screen and (max-width: 749px) {
+
   .banner--mobile-bottom .banner__media,
   .banner--stacked:not(.banner--mobile-bottom) .banner__media {
     position: relative;
@@ -372,6 +376,7 @@
 }
 
 @media screen and (max-width: 749px) {
+
   .banner--mobile-bottom::after,
   .banner--mobile-bottom .banner__media::after {
     display: none;
@@ -385,26 +390,26 @@
   top: 0;
   background: #000000;
   opacity: 0;
-  z-index: 1;
+  z-index: 0;
   width: 100%;
   height: 100%;
 }
 
-.banner__box > * + .banner__text {
+.banner__box>*+.banner__text {
   margin-top: 1.5rem;
 }
 
 @media screen and (min-width: 750px) {
-  .banner__box > * + .banner__text {
+  .banner__box>*+.banner__text {
     margin-top: 2rem;
   }
 }
 
-.banner__box > * + * {
+.banner__box>*+* {
   margin-top: 1rem;
 }
 
-.banner__box > *:first-child {
+.banner__box>*:first-child {
   margin-top: 0;
 }
 
@@ -432,7 +437,7 @@
   margin-bottom: 0;
 }
 
-.banner__box .banner__heading + * {
+.banner__box .banner__heading+* {
   margin-top: 1rem;
 }
 
@@ -449,14 +454,14 @@
     justify-content: flex-end;
   }
 
-  .banner--content-align-mobile-center .banner__buttons--multiple > * {
+  .banner--content-align-mobile-center .banner__buttons--multiple>* {
     flex-grow: 1;
     min-width: 22rem;
   }
 }
 
 @media screen and (min-width: 750px) {
-  .banner--content-align-center .banner__buttons--multiple > * {
+  .banner--content-align-center .banner__buttons--multiple>* {
     flex-grow: 1;
     min-width: 22rem;
   }
@@ -466,11 +471,12 @@
   }
 }
 
-.banner__box > * + .banner__buttons {
+.banner__box>*+.banner__buttons {
   margin-top: 2rem;
 }
 
 @media screen and (max-width: 749px) {
+
   .banner:not(.slideshow) .rte a,
   .banner:not(.slideshow) .inline-richtext a:hover,
   .banner:not(.slideshow) .rte a:hover {
@@ -479,6 +485,7 @@
 }
 
 @media screen and (min-width: 750px) {
+
   .banner--desktop-transparent .rte a,
   .banner--desktop-transparent .inline-richtext a:hover,
   .banner--desktop-transparent .rte a:hover {
